<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.praj.farmmanager.Farmmaintenance">

    <TextView
        android:id="@+id/farmmaintainenancetext"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/farmlabel"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/fan_state"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/fanon"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/farmmaintainenancetext"
        android:layout_marginStart="90dp" />

    <Button
        android:id="@+id/sprinkler_state"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="60dp"
        android:background="@color/purple"
        android:gravity="center"
        android:text="@string/spon"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fan_state"
        android:layout_marginStart="90dp" />

</android.support.constraint.ConstraintLayout>
