<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.example.praj.farmmanager.MainActivity">


    <TextView
        android:id="@+id/tempandhum"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:background="@color/green"
        android:text="@string/tempandhum"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />



    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:background="@color/orange"
        android:text="@string/fanon"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tempandhum"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginRight="-383dp"
        android:layout_marginTop="58dp"
        android:background="@color/purple"

        android:text="@string/fansp"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tempandhum" />
</android.support.constraint.ConstraintLayout>
